# poetry-semantic-release

./: CHANGELOG.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: dispatch.yml  release.yml
